@@ -5,7 +5,7 @@ use warnings;
 use 5.010_001;
 use Teng::Schema::Declare;
 
-use version; our $VERSION = 'v0.5.0';
+use version; our $VERSION = 'v0.5.1';
 
 table {
     name    'semaphores';
