@@ -2,6 +2,11 @@ Revision history for Perl extension App-Koyomi
 
 {{$NEXT}}
 
+2015-06-07 v0.5.1  YASUTAKE Kiyoshi <yasutake.kiyoshi@gmail.com>
+
+    - Add: Command-line options for koyomi-cli - --config|-c <Str> to specify
+      config path, --debug|-d for debug logging.
+
 2015-06-07 v0.5.0  YASUTAKE Kiyoshi <yasutake.kiyoshi@gmail.com>
 
     - Add: SQLite schema
